--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+<title>haoyan(runoob.com)</title>
 </head>
 <body>
 
-<h1>我的第一个标题</h1>
-<p>我的第一个段落。</p>
+<h1>Haoyan The Me</h1>
+<p>试一试！</p>
 
 </body>
 </html>
